--- a/src/css/style.css
+++ b/src/css/style.css
@@ -39,7 +39,7 @@ header {
 
 @media (max-height: 670px) {
     header {
-        @apply bg-top
+        @apply bg-[center_top_1rem]
     }
     .logo {
         @apply top-[4.5rem]
