--- a/src/css/style.css
+++ b/src/css/style.css
@@ -28,9 +28,7 @@ p, span {
 }
 
 header {
-    @apply bg-mobile bg-cover md:bg-mobile md:bg-auto md:h-[90vh] lg:bg-desktop lg:bg-cover lg:bg-right bg-no-repeat;
     height: 100svh;
-
 }
 
 .logo {
@@ -39,7 +37,7 @@ header {
 
 @media (max-height: 670px) {
     header {
-        @apply bg-[center_top_1rem]
+        @apply bg-[center_top_rem]
     }
     .logo {
         @apply top-[4.5rem]
