--- a/src/css/style.css
+++ b/src/css/style.css
@@ -20,7 +20,7 @@ h1 {
 }
 
 h2 {
-    @apply font-extrabold text-lg tracking-tighter lg:leading-[3.5rem] lg:text-[2.375em];
+    @apply font-extrabold text-4xl lg:tracking-tighter lg:leading-[3.5rem] lg:text-[2.375em];
 }
 
 p, span {
