--- a/src/css/style.css
+++ b/src/css/style.css
@@ -75,7 +75,7 @@ input:focus {
 }
 
 .learn {
-    @apply bg-[#8C9EF4] rounded-full px-4 py-2 m-2 font-medium text-white
+    @apply bg-[#8C9EF4] rounded-full px-4 py-2 m-2 font-medium text-white shadow-lg
 }
 
 
@@ -88,6 +88,15 @@ input:focus {
     /* applica una transizione di fade-in/fade-out al cerchio del radar */
     opacity: 0.5;
     animation: fade-in-out 2s ease-in-out infinite alternate;
+}
+
+
+.bar:hover {
+    @apply fill-[#618DFF]
+}
+
+#tooltip {
+    @apply absolute w-[200px] h-auto p-3 bg-white border-[1px] border-black rounded-md shadow-md pointer-events-none hidden
 }
 
 @keyframes fade-in-out {
